--- a/002_wikipedia_scraping_2024-5.ipynb
+++ b/002_wikipedia_scraping_2024-5.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "80def2a8",
+   "execution_count": 24,
+   "id": "5865c0d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2100a549",
+   "execution_count": 25,
+   "id": "701ea9e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "442d6622",
+   "execution_count": 26,
+   "id": "96527bc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,15 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "50aeb200",
+   "execution_count": 27,
+   "id": "d7799ab6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def scrape_matches(url):\n",
+    "    \n",
+    "    filename = url.split('/')[-1] + \".json\"\n",
+    "    \n",
+    "    print(f\"downloading {filename}\")\n",
+    "    \n",
     "    zapasy = []\n",
     "    itemprops = ['homeTeam','awayTeam','location']\n",
-    "    r = requests.get(url, timeout=10, headers=headers)\n",
+    "    r = requests.get(url, timeout=20, headers=headers)\n",
     "    soup = BeautifulSoup(r.text, \"html.parser\")\n",
     "    fotbalboxy = soup.find_all(class_='footballbox')\n",
     "    for f in fotbalboxy:\n",
@@ -77,23 +82,21 @@
     "        zapas['phase'] = find_last_h2(f).text.split('[')[0].strip()\n",
     "        for d in f.find_all('div'):\n",
     "            if \"Attendance\" in d.text:\n",
-    "                zapas['attendance'] = d.text.replace('Attendance: ','').replace(',','').split('[')[0].strip()\n",
+    "                zapas['attendance'] = d.text.replace('Attendance: ','')\n",
     "                if d.find('sup'):\n",
     "                    zapas['attendance'] = zapas['attendance'][:-len(d.find('sup').text)]\n",
     "        zapasy.append(zapas)\n",
-    "    \n",
-    "    filename = url.split('/')[-1] + \".json\"\n",
-    "    \n",
+    "\n",
     "    with open(os.path.join('data_raw',filename), \"w+\", encoding=\"utf-8\") as soubor:\n",
     "        soubor.write(json.dumps(zapasy))\n",
-    "    \n",
+    "\n",
     "    return(zapasy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "75276602",
+   "execution_count": 28,
+   "id": "26a8bef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,26 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3153bbee",
+   "execution_count": 29,
+   "id": "ac5cc72a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://en.wikipedia.org/wiki/2024%E2%80%9325_UEFA_Champions_League_qualifying_phase_and_play-off_round\n",
-      "https://en.wikipedia.org/wiki/2024%E2%80%9325_UEFA_Champions_League\n",
-      "https://en.wikipedia.org/wiki/2024%E2%80%9325_UEFA_Europa_League_qualifying_phase_and_play-off_round\n",
-      "https://en.wikipedia.org/wiki/2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Main_Path)\n",
-      "https://en.wikipedia.org/wiki/2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Champions_Path)\n"
+      "downloading 2024%E2%80%9325_UEFA_Champions_League_qualifying_phase_and_play-off_round.json\n",
+      "downloading 2024%E2%80%9325_UEFA_Champions_League.json\n",
+      "downloading 2024%E2%80%9325_UEFA_Europa_League_qualifying_phase_and_play-off_round.json\n",
+      "downloading 2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Main_Path).json\n",
+      "downloading 2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Champions_Path).json\n"
      ]
     }
    ],
    "source": [
     "for competition, pages in download.items():\n",
     "    for p in pages:\n",
-    "        print(p)\n",
     "        scrape_matches(p)"
    ]
   }
