téměř hotová analýza VE klubů

--- a/001_wiki_download.ipynb
+++ b/001_wiki_download.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7cfeeb88",
+   "id": "e7f43a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "caa1d68f",
+   "id": "53a98403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e28c03f8",
+   "id": "d6b16e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5a24e868",
+   "id": "b9af1316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cd680549",
+   "id": "b8b8d892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "babe41eb",
+   "id": "3df458b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ef4ffa30",
+   "id": "a1e1ed83",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "198702d0",
+   "id": "283f0147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7e934b30",
+   "id": "f0a35737",
    "metadata": {},
    "outputs": [
     {
@@ -853,6 +853,35 @@
       "https://en.wikipedia.org/wiki/2022%E2%80%9323_UEFA_Europa_League_group_stage downloaded\n",
       "https://en.wikipedia.org/wiki/2022%E2%80%9323_UEFA_Europa_Conference_League_qualifying_phase_and_play-off_round_(Main_Path) downloaded\n",
       "https://en.wikipedia.org/wiki/2022%E2%80%9323_UEFA_Europa_Conference_League_qualifying_phase_and_play-off_round downloaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in corrections:\n",
+    "    download_matches(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0ee416b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrections = ['https://en.wikipedia.org/wiki/2021%E2%80%9322_UEFA_Europa_Conference_League_knockout_phase']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eb22bfab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://en.wikipedia.org/wiki/2021%E2%80%9322_UEFA_Europa_Conference_League_knockout_phase downloaded\n"
      ]
     }
    ],
