readme + 901_Eastern_Bloc

--- a/004_wikipedia_scraping_2024-5.ipynb
+++ b/004_wikipedia_scraping_2024-5.ipynb
@@ -126,82 +126,10 @@
      "output_type": "stream",
      "text": [
       "downloading 2024%E2%80%9325_UEFA_Champions_League_qualifying_phase_and_play-off_round.json\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
       "downloading 2024%E2%80%9325_UEFA_Champions_League.json\n",
       "downloading 2024%E2%80%9325_UEFA_Europa_League_qualifying_phase_and_play-off_round.json\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
       "downloading 2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Main_Path).json\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "downloading 2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Champions_Path).json\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n",
-      "location\n"
+      "downloading 2024%E2%80%9325_UEFA_Conference_League_qualifying_phase_and_play-off_round_(Champions_Path).json\n"
      ]
     }
    ],
